--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "http://HossamMahmoudKhedr.github.io/hossam_mahmoud_portfolio",
+	"homepage": "https://hossam-mahmoud-portfolio.vercel.app/",
 	"name": "hossam_mahmoud_portfolio",
 	"version": "0.1.0",
 	"private": true,
