add description and keywords

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
 	"short_name": "Hossam Mahmoud",
-	"name": "Create React App Sample",
+	"name": "Hossam Mahmoud - Frontend Developer Portfolio",
 	"icons": [
 		{
 			"src": "./Logo.png",
