Initial Draft of harish web profile

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "Hossam Mahmoud",
-	"name": "Hossam Mahmoud - Frontend Developer Portfolio",
+	"short_name": "Harish",
+	"name": "Harish K Shetty - Frontend Developer Portfolio",
 	"icons": [
 		{
 			"src": "./Logo.png",
